tests/models/struct/unnamed/i8/fail/ge.stderr
error[E0277]: can't compare `i8` with `{float}`
 --> tests/models/struct/unnamed/i8/fail/ge.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^ no implementation for `i8 < {float}` and `i8 > {float}`
  |
  = help: the trait `PartialOrd<{float}>` is not implemented for `i8`
  = help: the following other types implement trait `PartialOrd<Rhs>`:
            f32
            f64
            i128
            i16
            i32
            i64
            i8
            isize
          and $N others
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
